plugins/devkit/devkit-java-tests/testData/inspections/extensionRegisteredAsServiceOrComponent/ExtensionService.java
class <error descr="A class must not be registered as both an extension and a service">ExtensionService</error> implements MyExtension { }